--- a/css/main.css
+++ b/css/main.css
@@ -62,32 +62,32 @@ h1:after {
   content: attr(data-text);
   left: 0;
   position: absolute;
-  text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5), 3px 1px 3px rgba(255, 0, 255, 0.85), -3px -2px 3px rgba(0, 0, 255, 0.85), 1px -2px 0 rgba(255, 255, 255, 0.8);
+  text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5), 3px 1px 3px rgba(255, 0, 255, 0.85), -3px -2px 3px rgba(255, 136, 0, 0.85), 1px -2px 0 rgba(255, 255, 255, 0.8);
   z-index: -3;
 }
 h1:before {
   content: " ";
   position: absolute;
-  top: 0em;
-  left: -10;
+  top: -0.2em;
+  left: 10%;
   width: 5em;
   height: 8em;
   background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/triangle.svg") no-repeat;
   background-size: 5em;
-  width: 300%;
-  z-index: -4;
+  width: 350%;
+  z-index: -9;
   transition: transform 0.3s ease-in-out; /* add this line */
 }
 
 h2 {
-  text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5), 2px 1px 2px rgba(255, 0, 255, 0.85), -3px -2px 3px rgba(0, 0, 255, 0.85), 1px -2px 0 rgba(255, 255, 255, 0.8);
-  color: rgb(255, 0, 234);
+  text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5), 2px 1px 2px rgba(255, 145, 0, 0.85), -3px -2px 3px rgba(255, 94, 0, 0.959), 1px -2px 0 rgba(255, 255, 255, 0.8);
+  color: rgb(255, 145, 0);
   font-size: 2em;
   transform: rotateZ(-15deg);
   position: absolute;
   font-family: "Courgette", cursive;
   transition: font-size 1s;
-  margin-top: 3.5em;
+  margin-top: 3.9em;
 }
 
 .iframe-container {
