--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,7 @@ img {
 
 
 
+
 .graph-container {
     height: 60vh;
     overflow: visible;
@@ -265,27 +266,10 @@ audio:hover {
   width: 10%; /* the width will be 100% when hovered */
 }
 
-.wrapper {
-  display: grid;
-  place-items: center;
-  position: relative;
-  width: 100%;
-  height: 120vh;
-  z-index: 10; /* This ensures the wrapper is on top of the floating image */
-}
-
 #floating-image {
   position: fixed;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 9; /* Lower than the wrapper's z-index */
-  width: 100%;
-}
-
-/* Any other elements you want in front */
-.element {
-  /* Your styles */
-  z-index: 1000; /* Adjust as needed */
-  position: relative; /* Position if not already */
+  z-index: 999; /* Ensures it stays above other content */
 }
